examples/test/testpolicy10908.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10908
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key37: value49
      key33: value36
      key7: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value19
      podSelector:
        matchLabels:
          key6: value12
          key1: value29
          key24: value16
